tests/errors/type_check/place_typing/place_field_on_non_struct.sim

        fn f(n: i64) {
            a: i64;
            entry:
            a = copy n.x;
            return
        }
        