tests/errors/type_check/place_typing/place_field_on_non_struct.err.expected
error: at 5:13: [TC-FieldOfNonStruct] In function 'f', block 'entry': Cannot project field 'x' of non-struct type i64
   |
 5 |             a = copy n.x;
   |             ^^^^^^^^^^^^
